[tool.poetry]
name = "zappa-test"
version = "0.1.0"
description = "Zappa test"
authors = ["Seonghyeon Kim <self@seonghyeon.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
zappa = "^0.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
